# openinterpreter

./: BUILDING.md  README.md
.github/workflows/: public-ci.yml  rust-release.yml
codex-rs/: Cargo.toml
codex-rs/analytics/src/: client.rs
codex-rs/app-server-client/: README.md
codex-rs/app-server-launcher/src/: lib.rs
codex-rs/app-server/src/: codex_message_processor.rs  interpreter_catalog.rs
codex-rs/arg0/src/: lib.rs
codex-rs/chat-wire-compat/src/: client.rs  request.rs  stream.rs
codex-rs/cli/src/: lib.rs  main.rs  mcp_cmd.rs
codex-rs/cli/tests/: mcp_list.rs
codex-rs/codex-api/src/: anthropic.rs  api_bridge.rs  api_bridge_tests.rs
codex-rs/codex-api/tests/: models_integration.rs
codex-rs/codex-client/src/: retry.rs
codex-rs/config/src/: config_toml.rs  profile_toml.rs  thread_config.rs
codex-rs/core/: Cargo.toml  config.schema.json
codex-rs/core/src/: client.rs  compact_tests.rs  exec.rs  goals.rs  session_startup_prewarm.rs  stream_events_utils.rs  test_support.rs  thread_manager.rs  turn_metadata.rs  (+3 more)
codex-rs/exec/: Cargo.toml
codex-rs/linux-sandbox/: README.md
codex-rs/model-provider-info/: provider_catalog.json
codex-rs/ollama/: Cargo.toml
codex-rs/ollama-wire/: Cargo.toml
codex-rs/ollama-wire/src/: chat_events.rs  chat_stream.rs  chat_types.rs  lib.rs  line_buffer.rs  think_tests.rs  url.rs
codex-rs/server-cli/: Cargo.toml
codex-rs/tools/: BUILD.bazel
codex-rs/toon/: Cargo.toml
codex-rs/toon/src/: lib.rs
docs/: contributing.md
scripts/: build-interpreter-release.sh
scripts/install/: install.ps1  install.sh
(+184 files in other folders)
