[package]
name = "codex-toon"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_toon"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toon-format = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
